--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
-DATABASE_URL=postgresql://postgres:12345@localhost:5432/project_observatory
+DATABASE_URL= postgresql://postgres:12345@localhost:5432/project_observatory
+
+#postgresql://postgres:FFsAJZwigwLlHSFCxNrrVpFyXkODdVtN@postgres.railway.internal:5432/railway
