--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,31 @@
 annotated-types==0.7.0
 anyio==4.6.0
+asyncpg==0.29.0
 click==8.1.7
 colorama==0.4.6
+et-xmlfile==1.1.0
 fastapi==0.115.0
 greenlet==3.1.1
 h11==0.14.0
+httptools==0.6.1
 idna==3.10
+numpy==2.1.2
+openpyxl==3.1.5
+pandas==2.2.3
 psycopg2==2.9.9
-psycopg2-binary==2.9.9
 pydantic==2.9.2
 pydantic_core==2.23.4
+python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
+python-multipart==0.0.12
+pytz==2024.2
+PyYAML==6.0.2
+six==1.16.0
 sniffio==1.3.1
 SQLAlchemy==2.0.35
 starlette==0.38.6
 typing_extensions==4.12.2
-uvicorn==0.31.0
+tzdata==2024.2
+uvicorn==0.31.1
+watchfiles==0.24.0
+websockets==13.1
