--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-DATABASE_URL= postgresql://postgres:12345@localhost:5432/project_observatory
-
-#postgresql://postgres:FFsAJZwigwLlHSFCxNrrVpFyXkODdVtN@postgres.railway.internal:5432/railway
+DATABASE_URL=postgresql://postgres:OTwgCdDMajANTgrVMMROFporMxmqpSui@autorack.proxy.rlwy.net:57112/railway
+#postgresql://postgres:OTwgCdDMajANTgrVMMROFporMxmqpSui@postgres.railway.internal:5432/railway
+#postgresql://postgres:12345@localhost:5432/project_observatory
