--- a/requirements.txt
+++ b/requirements.txt
@@ -6,13 +6,16 @@ colorama==0.4.6
 et-xmlfile==1.1.0
 fastapi==0.115.0
 greenlet==3.1.1
+gunicorn==23.0.0
 h11==0.14.0
 httptools==0.6.1
 idna==3.10
 numpy==2.1.2
 openpyxl==3.1.5
+packaging==24.1
 pandas==2.2.3
 psycopg2==2.9.9
+psycopg2-binary==2.9.9
 pydantic==2.9.2
 pydantic_core==2.23.4
 python-dateutil==2.9.0.post0
