--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
-DATABASE_URL= postgresql://postgres:12345@localhost:5432/project_observatory
+DATABASE_URL=postgresql://postgres:12345@localhost:5432/project_observatory
+
+SECRET_KEY=sonounaprueba-
 
 #postgresql://postgres:FFsAJZwigwLlHSFCxNrrVpFyXkODdVtN@postgres.railway.internal:5432/railway
