Mejora de autenticacion utilizando las cookie para ingresar a rutas protegidas

--- a/.env
+++ b/.env
@@ -1,5 +1,7 @@
 DATABASE_URL=postgresql://postgres:12345@localhost:5432/project_observatory
 
 SECRET_KEY=sonounaprueba-
+ENV=development
+
 
 #postgresql://postgres:FFsAJZwigwLlHSFCxNrrVpFyXkODdVtN@postgres.railway.internal:5432/railway
