Nuevo deploy en railway, nueva coneccion al servidor de pg y se añadio descripcion a las categorias

--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
-DATABASE_URL=postgresql://postgres:OTwgCdDMajANTgrVMMROFporMxmqpSui@autorack.proxy.rlwy.net:57112/railway
+DATABASE_URL=postgresql://postgres:YotWaKJWDzNHlYSOcXtXLxPqYypNOqJs@junction.proxy.rlwy.net:56866/railway
+#postgresql://postgres:12345@localhost:5432/project_observatory
+#postgresql://postgres:OTwgCdDMajANTgrVMMROFporMxmqpSui@autorack.proxy.rlwy.net:57112/railway
 #postgresql://postgres:12345@localhost:5432/project_observatory
