--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,11 @@
 annotated-types==0.7.0
 anyio==4.6.0
 asyncpg==0.29.0
+Authlib==1.3.2
+cffi==1.17.1
 click==8.1.7
 colorama==0.4.6
+cryptography==43.0.3
 et-xmlfile==1.1.0
 fastapi==0.115.0
 greenlet==3.1.1
@@ -14,8 +17,10 @@ numpy==2.1.2
 openpyxl==3.1.5
 packaging==24.1
 pandas==2.2.3
+passlib==1.7.4
 psycopg2==2.9.9
 psycopg2-binary==2.9.9
+pycparser==2.22
 pydantic==2.9.2
 pydantic_core==2.23.4
 python-dateutil==2.9.0.post0
