--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,8 @@ cffi==1.17.1
 click==8.1.7
 colorama==0.4.6
 cryptography==43.0.3
+dnspython==2.7.0
+email_validator==2.2.0
 et-xmlfile==1.1.0
 fastapi==0.115.0
 greenlet==3.1.1
